# satdata_downloader

./: README.md  app.py  pyproject.toml  requirements.txt
docs/: completeness_checklist.md
satfetch/: __init__.py  cli.py  models.py  utils.py
satfetch/providers/: __init__.py  base.py  copernicus.py  gee.py  stac_provider.py  usgs_m2m.py
tests/: test_registry.py  test_utils.py
